Dev (#22)
* Bump npm deps to clear Dependabot alerts (electron, fast-uri, js-yaml, undici, browserslist, postcss, @xmldom/xmldom)

npm update in desktop/ and vscode-extension/, no package.json changes
needed (electron's existing ^39.8.5 range already covers the patched
39.8.10). Verified: desktop build + 61/61 tests pass, vscode-extension
build passes with 0 remaining vulnerabilities.

extract-zip (desktop, transitive via electron tooling) stays open -
no upstream fix published yet for GHSA-jmr9-qjv8-65gv.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* desktop-java: add project grouping over folders

A pure UI grouping layer above workspace folders - a project is a
name plus a set of folders (Project > Folder > Chats in the sidebar),
for organizing several repos that belong to one product (frontend/
backend/mobile/security). No shared memory or context between a
project's folders' chats - per-chat memory stays exactly as-is.

- ProjectEntry (new record) + FolderEntry.projectId (nullable, one
  project per folder max)
- ConversationStore: projects table/CRUD, setFolderProject(), same
  unbind-not-cascade pattern removeFolder() already uses
- ChatViewModel: projects() ObservableList, addProject/renameProject/
  removeProject/assignFolderToProject, refreshAll() (renamed from
  refreshConversationsAndFolders) also loads projects so split-view
  sibling sync covers them for free
- MainWindow: "+ New project" button, project node in the sidebar
  tree (Rename/Remove), "Assign to project…" on folders, and a
  recursive selectTreeItemFor() now that a conversation can sit three
  levels deep under a project

9 new tests (ConversationStoreTest project CRUD + unbind-on-remove,
ChatViewModelSiblingSyncTest projects sync). 143/143 passing.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* desktop-java: render code blocks in a dedicated dark box with Copy/Download

Fenced code blocks (```lang ... ```) in assistant messages now render
as their own dark, fixe